--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    height: 400px;
+    height: 100%;
   }
 
   @media screen and (max-width: 576px) {
