--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* Media Screen */
-  @media screen and (max-width: 576px) {
-    .landing-grid {
-    height: 100%,
+@media screen and (max-width: 576px) {
+  .landing-grid {
+    height: 100%;
   }
 }
