:iphone: add medium screen query

--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -2,9 +2,13 @@
 
 .category-tabs {
     margin-top: 20px;
+    padding-top: 20px;
   }
   
   .project-grid {
+    flex-shrink: 0;
+    margin-top: 20px;
+    padding-top: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
