--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -2,7 +2,8 @@
 
 .landing-main {
   width: 100%;
-  height: 115vh;
+  height: 80em;
+  flex-shrink: 2;
 }
 .landing-grid {
   background: #dce35b; /* fallback for old browsers */
@@ -106,7 +107,7 @@
   color: greenyellow;
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 900px) {
   .landing-main {
     width: 100%;
     height: 80em;
